fix contrast

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -160,7 +160,7 @@ nav li:hover {
 }
 
 .upgrade-item a {
-  color: #01b0d3;
+  color: #242332;
   font-size: 1.2em;
 }
 
